Enable scm plugin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,8 @@
 [build-system]
-requires = ["setuptools>=61.0"]
+requires = [
+  "setuptools>=61.0",
+  "setuptools_scm>=8.0",
+]
 build-backend = "setuptools.build_meta"
 
 [project]
@@ -26,6 +29,3 @@ test = [
 [project.urls]
 "Homepage" = "https://github.com/BIOIN-401-Project-8/gard"
 "Bug Tracker" = "https://github.com/BIOIN-401-Project-8/gard/issues"
-
-[tool.setuptools.package-data]
-myModule = ["data/diseases.trimmed.json"]
